# Farey

./: .gitignore  CMakeLists.txt  FareyIterator.h  Fraction.cpp  Fraction.h  LICENSE  README.md  vcpkg.json
frontend/: index.html  package-lock.json  package.json  webpack.config.js
frontend/src/: index.ts
src/: CMakeLists.txt  Fraction.cpp  sources.cmake
src/include/Farey/: Fraction.h
src/runner/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
test/core/: CMakeLists.txt  FractionTest.cpp  sources.cmake
